@@ -162,11 +162,15 @@ you see listed with this command.
 AFFECTS=AFFECT
 AFFECT=\
 Command : AFFECTS\n\r\
-Usage   : AFFECTS\n\r\
+Usage   : AFFECTS ([TYPE]/[DOMAIN]) ([SORT FIELD])\n\r\
 Example : affects\n\r\
+Example : affects spell\n\r\
+Example : affects name "common skill"\n\r\
 Short(s): AFF\n\r\
 List your present disposition, as well as any spells or other affects \
-that your character is currently under the influence of.
+that your character is currently under the influence of.  You can sort by \
+NAME, DOMAIN, TYPE, or REMAIN.  You can filter by any ability type (spell, \
+chant, skill, common skill, song, etc) or domain (abjuration, etc..)
 
 AFK=\
 Command : AFK\n\r\
@@ -1855,7 +1859,7 @@ Example : imc2 channels\n\r\
 Short(s): \n\r\
 List all the channels potentially available to this mud.
 
-RELOAD=LOAD\
+RELOAD=LOAD
 LOAD=\
 Command : LOAD\n\r\
 Usage   : LOAD [AMMUNITION NAME] [WEAPON NAME]\n\r\
