@@ -225,7 +225,7 @@ HELP_=<EXPERTISE>The ability to do more damage when using a piercing-type ranged
 RANGEDBASH@x1=Ranged Bashing @x2,10,X3,-SKILL +Specialization_Ranged +Specialization_Bow,-MAXCLASSLEVEL +>={27+(5*@x1)},+INT {15+@x1},0,1,0,0,0
 HELP_=<EXPERTISE>The ability to do more damage when using a bashing-type blunt-class ranged or thrown weapon.
 
-RANGEDFOCUS@x1=Ranged Focus @x2,10,X4,-BASECLASS +Fighter -SKILL +Specialization_Ranged +Specialization_Bow,-MAXCLASSLEVEL +>={27+(5*@x1)},+WIS {10+@x1},0,1,0,0,0
+RANGEDFOCUS@x1=Ranged Focus @x2,10,X4,-BASECLASS +Fighter -SKILL +Specialization_Ranged +Specialization_Bow +Fighter_RapidReload,-MAXCLASSLEVEL +>={27+(5*@x1)},+WIS {10+@x1},0,1,0,0,0
 HELP_=<EXPERTISE>The ability for fighters to wield higher level blunt-class ranged or thrown weapons.
 
 SWORDSTRIKE@x1=Sword Striking @x2,10,LEVEL,-SKILL +Specialization_Sword,-MAXCLASSLEVEL +>={24+(5*@x1)},+DEX {15+@x1},0,1,0,0,0
